# engine

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  check.sh
.github/workflows/: ci.yml  clang-format.yml  clang-tidy.yml  release.yml
assets/shaders/: debug.vert  sprite.frag  sprite.vert
game/: CMakeLists.txt
game/src/: GameScene.cpp  GameScene.hpp  main.cpp
src/assets/: AssetManager.hpp  Handle.hpp
src/audio/: AudioEvent.hpp  AudioSystem.cpp  AudioSystem.hpp  Music.cpp  Music.hpp  Sound.cpp  Sound.hpp
src/collision/: CollisionEvent.hpp  CollisionSystem.cpp  CollisionSystem.hpp
src/core/: Engine.cpp  Engine.hpp
src/ecs/: Components.hpp  Entity.hpp  Registry.hpp  SparseSet.hpp  View.hpp
src/ecs/systems/: PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/input/: InputManager.cpp  InputManager.hpp
src/renderer/: Camera.cpp  Camera.hpp  DebugDraw.cpp  DebugDraw.hpp  RenderQueue.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SpriteBatch.cpp  SpriteBatch.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
src/scene/: Scene.hpp  SceneManager.cpp  SceneManager.hpp
